background image and h1

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
 
+    <h1><strong>THE BIGGEST STUDIO FOR YEARS</strong></h1>
+    <button type="button" class="btn btn-danger">FIND OUT MORE</button>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
