--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 
-    <h1><strong>THE BIGGEST STUDIO FOR YEARS</strong></h1>
-    <button type="button" class="btn btn-danger">FIND OUT MORE</button>
+    <h1 class="text-uppercase"><strong>THE BIGGEST STUDIO FOR YEARS</strong></h1>
+    <button type="button" class="btn btn-danger btn-xl">FIND OUT MORE</button>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
