center the elements

--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 <title>WhiteFox Studio</title>
 </head>
 <body>
-
-    <h1 class="text-uppercase"><strong>THE BIGGEST STUDIO FOR YEARS</strong></h1>
-    <button type="button" class="btn btn-danger btn-xl">FIND OUT MORE</button>
-
+    <div class="container d-flex align-items-center h-100">
+        <div class="row">
+            <header class="text-center col-12">
+                <h1 class="text-uppercase"><strong>THE BIGGEST STUDIO FOR YEARS</strong></h1>
+            </header>
+            <section class="text-center col-12">
+                <hr />
+                <button type="button" class="btn btn-danger btn-xl">FIND OUT MORE</button>
+            </section>
+        </div>
+    </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
