--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <header class="text-center col-12">
                 <h1 class="text-uppercase"><strong>THE BIGGEST STUDIO FOR YEARS</strong></h1>
             </header>
+            <div class="buffer col-12"></div>
             <section class="text-center col-12">
                 <hr />
                 <button type="button" class="btn btn-danger btn-xl">FIND OUT MORE</button>
