--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <div class="buffer col-12"></div>
             <section class="text-center col-12">
                 <hr />
-                <button type="button" class="btn btn-danger btn-xl">FIND OUT MORE</button>
+                <a href="https://mailchi.mp/f908d9246535/whitefox">
+                    <button type="button" class="btn btn-danger btn-xl">FIND OUT MORE</button>
+                </a>
             </section>
         </div>
     </div>
